test/errors/assign_to_const.li
let x = 5;
const y = 10;
x = 7;
y = 20;
